source/sidebar/dark.css
/* --lindy-dark-theme-text-color and background color injected from common/theme.ts */

/* use same colors as in source/overlay/indexDark.css */

.annotation {
    color: var(--lindy-dark-theme-text-color) !important;
}
.annotation > textarea {
    color: var(--lindy-dark-theme-text-color) !important;
    background-color: #262626 !important;
}
.annotation > textarea::placeholder {
    color: #757575 !important;
}
.annotation > .top-icons, 
.annotation > .info-bar {
    color: #616161 !important;
}
.top-icons > *:hover,
.info-bar > *:hover,
.upvote-button:hover,
.reply-button:hover,
.public-toggle.is-public {
    color: #bdbdbd !important
}

.lindy-tooltp {
    --text-color: var(--lindy-dark-theme-text-color) !important;
}

